--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,68 @@
-Pillow==8.4.0
-PyYAML==6.0
-Sphinx==4.2.0
-TBB==0.2
-anaconda-navigator==2.1.1
-appdirs==1.4.4
-argh==0.26.2
-asgiref==3.2.10
-atomicwrites==1.4.0
-backports.weakref==1.0.post1
-bkcharts==0.2
-black==19.10b0
-boto==2.49.0
-brotlipy==0.7.0
-certifi==2021.10.8
-click==8.0.3
-clyent==1.2.2
-comtypes==1.1.10
-conda-build==3.21.6
-conda-verify==3.4.2
-conda==4.12.0
-cycler==0.10.0
-cytoolz==0.11.0
-dask==2021.10.0
-entrypoints==0.3
-fonttools==4.25.0
-gunicorn==20.1.0
-inflection==0.5.1
-llvmlite==0.37.0
-locket==0.2.1
-mccabe==0.6.1
-mkl-fft==1.3.1
-mkl-service==2.4.0
-mpmath==1.2.1
-munkres==1.1.4
-mypy-extensions==0.4.3
-navigator-updater==0.2.1
-nltk==3.6.5
-pathspec==0.7.0
-patsy==0.5.2
-pep8==1.7.1
-pkginfo==1.7.1
-ply==3.11
-pycosat==0.6.3
-pycurl==7.44.1
-pyls-spyder==0.4.0
-pyodbc===4.0.0-unsupported
-pyreadline==2.1
-pytest==6.2.4
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.2.4
-pytz==2021.3
-pywin32==228
-scikit-image==0.16.2
-simplegeneric==0.8.1
-sip==4.19.13
-statsmodels==0.12.2
-tables==3.6.1
-terminado==0.9.4
-unicodecsv==0.14.1
-urllib3==1.26.7
-webencodings==0.5.1
-win-unicode-console==0.5
-wincertstore==0.2
-xlwings==0.24.9
-xlwt==1.3.0
-zict==2.0.0
-zope.event==4.5.0
+Pillow
+PyYAML
+Sphinx
+TBB
+anaconda-navigator
+appdirs
+argh
+asgiref
+atomicwrites
+backports.weakref
+bkcharts
+black
+boto
+brotlipy
+certifi
+click
+clyent
+comtypes
+conda-build
+conda-verify
+conda
+cycler
+cytoolz
+dask
+entrypoints
+fonttools
+gunicorn
+inflection
+llvmlite
+locket
+mccabe
+mkl-fft
+mkl-service
+mpmath
+munkres
+mypy-extensions
+navigator-updater
+nltk
+pathspec
+patsy
+pep8
+pkginfo
+ply
+pycosat
+pycurl
+pyls-spyder
+pyodbc
+pyreadline
+pytest
+python-lsp-jsonrpc
+python-lsp-server
+pytz
+pywin32
+scikit-image
+simplegeneric
+sip
+statsmodels
+tables
+terminado
+unicodecsv
+urllib3
+webencodings
+win-unicode-console
+wincertstore
+xlwings
+xlwt
+zict
+zope.event
